--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
     "@types/uuid": "^8.3.4",
+    "dotenv": "^16.0.0",
     "mongoose": "^6.2.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
