--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
     "@types/uuid": "^8.3.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
     "mongoose": "^6.2.5",
     "reflect-metadata": "^0.1.13",
