--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://bhayron:secretf5@cluster0.jufe8.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://user:password@cluster0.jufe8.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
