--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
 MONGO_URL=mongodb+srv://user:password@cluster0.jufe8.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+
+chave_acesso=khXGJl3bwfMNTHPoa91I7Ju6qZR/2exIeDkz0RB5
+
+id_chave=AKIAQEABLCVZ2UQA2UW2
+
+user=user
+
+
+password=qdWT3LNwIBai
+
